--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,16 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "main": "App.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "binary-extensions": "^3.0.0",
     "bootstrap": "^5.3.3",
+    "file-loader": "^6.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
